--- a/StockNFC/app/src/main/res/layout/activity_registro.xml
+++ b/StockNFC/app/src/main/res/layout/activity_registro.xml
@@ -50,6 +50,7 @@
         android:layout_height="wrap_content"
         android:text="@string/registrar"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"
+        android:onClick="onClick"/>
 
 </LinearLayout>
