Transición logIn a menu
Creada la transición entre login y menu
Creado revision de errores de usuario incorrecto o registro
Creada clase para generar dialogo alerta

--- a/StockNFC/app/src/main/res/layout/app_bar_main.xml
+++ b/StockNFC/app/src/main/res/layout/app_bar_main.xml
@@ -29,6 +29,8 @@
             android:id="@+id/contenedorFragments"
             android:layout_below="@+id/toolbarView">
         </RelativeLayout>
+
+        <!--<include layout="@layout/activity_registro" />-->
     </RelativeLayout>
 
 
