--- a/StockNFC/app/src/main/res/layout/activity_log_in.xml
+++ b/StockNFC/app/src/main/res/layout/activity_log_in.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="15dp"
         android:hint="@string/usuarioTxt"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:inputType="text"
+        android:inputType="textEmailAddress"
         android:textSize="20sp"/>
 
     <EditText
