--- a/StockNFC/app/src/main/res/layout/nav_header_main.xml
+++ b/StockNFC/app/src/main/res/layout/nav_header_main.xml
@@ -10,7 +10,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+    android:theme="@style/ThemeOverlay.AppCompat.Dark"
+    android:id="@+id/cabeceraMenuLateral">
 
     <ImageView
         android:id="@+id/imageView"
@@ -24,12 +25,13 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="Android Studio"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:id="@+id/nombreUsuarioMenu"/>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/emailUsuarioMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="android.studio@android.com" />
+        android:text="android.studio@android.com"/>
 
 </LinearLayout>
