--- a/StockNFC/app/src/main/res/layout/cardview.xml
+++ b/StockNFC/app/src/main/res/layout/cardview.xml
@@ -13,26 +13,13 @@
         android:layout_marginTop="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_marginBottom="5dp"
         app:cardBackgroundColor="@color/colorAccent">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/hello_blank_fragment"
-            android:id="@+id/nombreArticuloLista"/>
-            <TextView
-                android:layout_below="@+id/nombreArticuloLista"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/hello_blank_fragment"
-                android:id="@+id/stockArticuloLista"/>
+            android:text="@string/hello_blank_fragment" />
 
-
-        </RelativeLayout>
     </android.support.v7.widget.CardView>
 
 
