Solucionados problemas varios
-Tamaño de los cardViews
-Click en el listado (sin cambiar de fragmento)
-Añadido el id al cardView
-Modificado icono usuario
-Eliminada sombra cardView
-Añadidos colores
-Precio N/A cardView

--- a/StockNFC/app/src/main/res/values/colors.xml
+++ b/StockNFC/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="white">#FFFFFF</color>
     <color name="lightGreen">#387C66</color>
+    <color name="lightGrey">#BCC4D4</color>
+    <color name="lightGrey2">#9197A3</color>
+    <color name="lightOrange">#EBAA0C</color>
 </resources>
