--- a/StockNFC/app/src/main/res/layout/fragment_articulo.xml
+++ b/StockNFC/app/src/main/res/layout/fragment_articulo.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,57 +10,65 @@
 
     <EditText
         android:id="@+id/nombreArticulo"
+        android:layout_below="@+id/toolbarArticulo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/nombreArticulo"
         android:inputType="text"/>
     <EditText
         android:id="@+id/stockArticulo"
+        android:layout_below="@+id/nombreArticulo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/stockArticulo"
         android:inputType="number"/>
     <EditText
         android:id="@+id/alertaArticulo"
+        android:layout_below="@+id/stockArticulo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/alertaStock"
         android:inputType="number"/>
     <EditText
         android:id="@+id/precioArticulo"
+        android:layout_below="@+id/alertaArticulo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/precioArticulo"
         android:inputType="numberDecimal"/>
     <EditText
         android:id="@+id/fechaArticulo"
+        android:layout_below="@+id/precioArticulo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/fechaArticulo"
         android:enabled="false"/>
     <EditText
         android:id="@+id/proveedorArticulo"
+        android:layout_below="@+id/fechaArticulo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/proveedorArticulo"
         android:inputType="text"/>
     <ImageView
         android:id="@+id/imgArticulo"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_below="@+id/proveedorArticulo"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="30dp"
         android:background="@drawable/user"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"/>
+        android:layout_gravity="center"/>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/btnGuardarArticulo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/btnGuardarArticuloNFC"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_gravity="bottom|right|end"
         android:layout_marginBottom="15dp"
         android:layout_marginEnd="15dp"
-        android:src="@drawable/add" />
+        android:src="@drawable/nfc" />
 
-</LinearLayout>
+</RelativeLayout>
