--- a/StockNFC/app/src/main/res/layout/item_listaproductos.xml
+++ b/StockNFC/app/src/main/res/layout/item_listaproductos.xml
@@ -2,19 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/lightGrey">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="130dp"
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_marginTop="5dp"
-        app:cardBackgroundColor="@color/colorAccent"
+        app:cardBackgroundColor="@color/lightOrange"
         app:cardCornerRadius="15dp"
-        app:cardElevation="10dp">
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true">
 
 
         <RelativeLayout
@@ -23,10 +25,10 @@
 
             <ImageView
                 android:id="@+id/imagenArticuloLista"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp" />
+                android:layout_marginLeft="15dp"/>
 
             <TextView
                 android:id="@+id/nombreArticuloLista"
@@ -36,7 +38,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_toRightOf="@+id/imagenArticuloLista"
                 android:text="@string/hello_blank_fragment"
-                android:textSize="18sp" />
+                android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/stockArticuloLista"
@@ -47,7 +49,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_toRightOf="@+id/imagenArticuloLista"
                 android:text="@string/hello_blank_fragment"
-                android:textSize="18sp" />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/precioArticuloLista"
@@ -58,8 +60,18 @@
                 android:layout_marginTop="5dp"
                 android:layout_toRightOf="@+id/imagenArticuloLista"
                 android:text="@string/hello_blank_fragment"
-                android:textSize="14sp"
+                android:textSize="18sp"
                 android:layout_marginBottom="5dp"/>
+            <TextView
+                android:id="@+id/idArticuloLista"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/precioArticuloLista"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_toRightOf="@+id/imagenArticuloLista"
+                android:layout_marginBottom="5dp"
+                android:visibility="invisible"/>
 
 
         </RelativeLayout>
