--- a/StockNFC/app/src/main/res/layout/fragment_articulo.xml
+++ b/StockNFC/app/src/main/res/layout/fragment_articulo.xml
@@ -86,7 +86,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/proveedorArticulo"
-        android:inputType="text"/>
+        android:inputType="textEmailAddress"/>
     <ImageView
         android:id="@+id/imgArticulo"
         android:layout_below="@+id/proveedorArticulo"
