--- a/StockNFC/app/src/main/res/layout/activity_escritura.xml
+++ b/StockNFC/app/src/main/res/layout/activity_escritura.xml
@@ -4,6 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.victor.stocknfc.EscrituraActivity">
+    tools:context="com.example.victor.stocknfc.EscrituraActivity"
+    android:theme="@android:style/Theme.NoTitleBar"
+    android:background="@color/lightGrey"
+    la>
 
 </android.support.constraint.ConstraintLayout>
