--- a/StockNFC/app/src/main/res/layout/activity_escritura.xml
+++ b/StockNFC/app/src/main/res/layout/activity_escritura.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     tools:context="com.example.victor.stocknfc.EscrituraActivity"
     android:theme="@android:style/Theme.NoTitleBar"
-    android:background="@color/lightGrey"
-    la>
+    android:background="@color/lightGrey">
 
 </android.support.constraint.ConstraintLayout>
