--- a/StockNFC/app/src/main/res/layout/fragmento_pedido.xml
+++ b/StockNFC/app/src/main/res/layout/fragmento_pedido.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/nombreArticuloPedido"
+        android:layout_marginLeft="3dp"
         android:inputType="text"
         android:textSize="24dp"/>
     <TextView
