--- a/StockNFC/app/src/main/res/layout/fragmento_control_stock.xml
+++ b/StockNFC/app/src/main/res/layout/fragmento_control_stock.xml
@@ -22,7 +22,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         android:gravity="center"
-        android:hint="Nume"
+        android:inputType="number"
+        android:hint="Num"
         android:maxLines="1"
         android:textSize="50dp" />
 
