--- a/StockNFC/app/src/main/res/layout/toolbar_articulo.xml
+++ b/StockNFC/app/src/main/res/layout/toolbar_articulo.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar android:layout_height="?attr/actionBarSize"
     android:layout_width="match_parent"
-    android:background="@color/lightGreen"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/azulWala"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/toolbarArticulo">
+    android:id="@+id/toolbarArticulo"
+    app:titleTextColor="@color/white">
 
 </android.support.v7.widget.Toolbar>
