--- a/StockNFC/app/src/main/res/values/colors.xml
+++ b/StockNFC/app/src/main/res/values/colors.xml
@@ -5,7 +5,9 @@
     <color name="colorAccent">#FF4081</color>
     <color name="white">#FFFFFF</color>
     <color name="lightGreen">#387C66</color>
-    <color name="lightGrey">#BCC4D4</color>
+    <color name="lightGrey">#e5e5e5</color>
     <color name="lightGrey2">#9197A3</color>
+    <color name="lightGrey3">#ccc7c7</color>
     <color name="lightOrange">#EBAA0C</color>
+    <color name="azulWala">#00c4ac</color>
 </resources>
