--- a/StockNFC/app/src/main/res/layout/fragmento_lista_alertas.xml
+++ b/StockNFC/app/src/main/res/layout/fragmento_lista_alertas.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.victor.stocknfc.fragmetos.ListaArticulos">
+    tools:context="com.example.victor.stocknfc.fragmetos.Fragmento_Lista_Articulos">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="wrap_content"
