--- a/StockNFC/app/src/main/res/layout/fragmento_registro.xml
+++ b/StockNFC/app/src/main/res/layout/fragmento_registro.xml
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/usuarioTxt"
-        android:inputType="text"/>
+        android:inputType="textEmailAddress"/>
 
     <TextView
         android:id="@+id/contrasenhaRegistroTxt"
