--- a/StockNFC/app/src/main/res/values/styles.xml
+++ b/StockNFC/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/lightGrey</item>
-        <item name="colorPrimaryDark">@color/lightGrey2</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/azulWala</item>
+        <item name="colorPrimaryDark">@color/azulWala</item>
+        <item name="colorAccent">@color/azulWala</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
